Add MCP eval framework with viewer and tool description improvements (#86)
## Summary

Adds end-to-end LLM evaluation tests for the Content and Prompt MCP servers, a React-based eval results viewer, and iterative improvements to MCP tool descriptions based on eval findings.

## Changes

- **Eval framework** (`evals/`): YAML-driven test cases for `edit_content`, `update_item`, `edit_prompt_content`, and `update_prompt` tools. Each eval creates real data via MCP, gets LLM tool predictions, executes them, and verifies outcomes. Multi-model support (claude-haiku-4-5, gpt-4o-mini) with configurable samples, success thresholds, and concurrency.
- **Eval viewer** (`evals/viewer/`): React + TypeScript app for browsing eval results with summary matrix, per-test-case breakdowns, check-level detail, and cost/token tracking.
- **Concurrency control**: Replaced hand-rolled asyncio semaphore with flex-evals' built-in `max_concurrency` on the `@evaluate` decorator, which correctly excludes queue wait time from recorded durations.
- **Tool description improvements** based on eval failures:
  - Content MCP: Strengthened `update_item` tags parameter to discourage unnecessary tag inclusion
  - Prompt MCP: Reworded `arguments` parameter on `edit_prompt_content` and `update_prompt` to more strongly discourage providing arguments when variables are unchanged
  - Prompt MCP: Condensed `instructions.md` server instructions
- **Eval accuracy fixes**: Case-insensitive content checks, relaxed tags check to accept identical tags sent back unnecessarily (outcome is the same)
- **Prompt MCP schema**: Accept null for optional fields, revert anyOf workaround after sik-llms fix
- **Dependencies**: flex-evals >= 0.3.27, sik-llms >= 0.3.33

## Impact

- MCP tool descriptions changed for both Content and Prompt servers — LLMs will see updated guidance on when to omit optional parameters
- No breaking API changes
- New dev dependencies: flex-evals, sik-llms (eval-only)

--- a/backend/src/mcp_server/tools.yaml
+++ b/backend/src/mcp_server/tools.yaml
@@ -72,7 +72,7 @@ search_in_content:
 
 update_item:
   description: |
-    Update metadata (title, description, tags, url) and/or fully replace content. All parameters optional - only provide what you want to change. For targeted text edits (typos, inserting/removing paragraphs), use edit_content instead.
+    Rewrite, restructure, or fully replace an item's content, and/or update metadata (title, description, tags, url). Use whenever the instruction asks to rewrite, reorganize, simplify, or restructure the whole content. Use edit_content when editing a specific section. All parameters optional — only provide what you want to change.
   parameters:
     id: |
       The item ID (UUID). Use search_items if you need to discover item IDs.
@@ -83,7 +83,7 @@ update_item:
     description: |
       New description. Omit to leave unchanged.
     tags: |
-      New tags (replaces all existing tags). Omit to leave unchanged.
+      New tags list (FULL REPLACEMENT of all existing tags — include existing tags you want to keep). Do NOT provide this parameter unless you are intentionally changing tags — omitting it preserves existing tags automatically.
     url: |
       New URL (bookmarks only). Omit to leave unchanged.
     content: |
