--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -3,7 +3,7 @@
   "name": "Tiddly Bookmarks",
   "version": "0.1.0",
   "description": "Save bookmarks to Tiddly with one click",
-  "permissions": ["activeTab", "storage", "scripting"],
+  "permissions": ["activeTab", "storage", "scripting", "favicon"],
   "host_permissions": [
     "https://api.tiddly.me/*"
   ],
