--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "@uiw/react-codemirror": "^4.25.4",
     "axios": "^1.13.2",
     "diff": "^8.0.3",
+    "motion": "^12.34.3",
     "nunjucks": "^3.2.4",
     "react": "^19.2.0",
     "react-diff-viewer-continued": "^4.1.2",
